--- a/tarzan/pixiplayground/build.gradle
+++ b/tarzan/pixiplayground/build.gradle
@@ -24,5 +24,7 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.thymeleaf:thymeleaf:3.0.6.RELEASE')
+	compile('org.thymeleaf:thymeleaf-spring4:3.0.6.RELEASE')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
