Staring scala helloworld, ruby blog setup

--- a/argonaut/ruby/quotegenerator/Dockerfile
+++ b/argonaut/ruby/quotegenerator/Dockerfile
@@ -5,9 +5,6 @@ RUN apt-get install ruby-full -y
 RUN apt-get install git-core curl zlib1g-dev build-essential libssl-dev libreadline-dev libyaml-dev libsqlite3-dev sqlite3 libxml2-dev libxslt1-dev libcurl4-openssl-dev python-software-properties libffi-dev nodejs -y 
 
 
-RUN gem install rails
-
-RUN rails --version
 
 RUN apt-get install nano -y
 #RUN rails new quotegenerator
@@ -19,6 +16,15 @@ COPY code /opt
 COPY entrypoint.sh /
 RUN chown argonaut:argonaut /entrypoint.sh
 RUN chown argonaut:argonaut -R /quotegenerator
+RUN mkdir /home/argonaut
+RUN chown argonaut:argonaut /home/argonaut
+
+RUN gem install rails
+RUN gem install bundler
+
+RUN rails --version
+RUN chown argonaut: -R /var/lib/gems
+RUN chown argonaut: -R /usr/local/bin
 
 USER argonaut
 
